MDK-ARM/.vscode/uv4.log
*** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
Build target 'stm32f405rgt6'
compiling stm32f4xx_hal_timebase_tim.c...
compiling tim.c...
compiling usart.c...
compiling dma.c...
compiling stm32f4xx_hal_msp.c...
compiling gpio.c...
compiling freertos.c...
compiling stm32f4xx_it.c...
compiling can.c...
compiling i2c.c...
assembling startup_stm32f405xx.s...
compiling main.c...
compiling stm32f4xx_hal_flash_ex.c...
compiling stm32f4xx_hal_dma_ex.c...
compiling stm32f4xx_hal_flash_ramfunc.c...
compiling stm32f4xx_hal_can.c...
compiling stm32f4xx_hal_pwr.c...
compiling stm32f4xx_hal_rcc.c...
compiling stm32f4xx_hal_flash.c...
compiling stm32f4xx_hal_gpio.c...
compiling stm32f4xx_hal_rcc_ex.c...
compiling stm32f4xx_hal_dma.c...
compiling stm32f4xx_hal_tim_ex.c...
compiling stm32f4xx_hal_cortex.c...
compiling stm32f4xx_hal_tim.c...
compiling stm32f4xx_hal_pwr_ex.c...
compiling stm32f4xx_hal.c...
compiling stm32f4xx_hal_exti.c...
compiling motor.c...
compiling stm32f4xx_hal_i2c_ex.c...
compiling system_stm32f4xx.c...
compiling breathing_led.c...
compiling pid.c...
compiling croutine.c...
compiling list.c...
compiling ble.c...
compiling event_groups.c...
compiling stm32f4xx_hal_uart.c...
compiling timers.c...
compiling heap_4.c...
compiling stream_buffer.c...
compiling queue.c...
compiling port.c...
compiling cmsis_os.c...
compiling tasks.c...
eMPL/inv_mpu.c(29): error: call to undeclared function 'HAL_I2C_Mem_Write'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   29 |     if (HAL_I2C_Mem_Write(&hi2c1, dev_addr << 1, reg_addr, I2C_MEMADD_SIZE_8BIT, data, length, 100) != HAL_OK) {
      |         ^
eMPL/inv_mpu.c(29): error: use of undeclared identifier 'hi2c1'
   29 |     if (HAL_I2C_Mem_Write(&hi2c1, dev_addr << 1, reg_addr, I2C_MEMADD_SIZE_8BIT, data, length, 100) != HAL_OK) {
      |                            ^
eMPL/inv_mpu.c(29): error: use of undeclared identifier 'I2C_MEMADD_SIZE_8BIT'
   29 |     if (HAL_I2C_Mem_Write(&hi2c1, dev_addr << 1, reg_addr, I2C_MEMADD_SIZE_8BIT, data, length, 100) != HAL_OK) {
      |                                                            ^
eMPL/inv_mpu.c(29): error: use of undeclared identifier 'HAL_OK'
   29 |     if (HAL_I2C_Mem_Write(&hi2c1, dev_addr << 1, reg_addr, I2C_MEMADD_SIZE_8BIT, data, length, 100) != HAL_OK) {
      |                                                                                                        ^
eMPL/inv_mpu.c(36): error: call to undeclared function 'HAL_I2C_Mem_Read'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   36 |     if (HAL_I2C_Mem_Read(&hi2c1, dev_addr << 1, reg_addr, I2C_MEMADD_SIZE_8BIT, data, length, 100) != HAL_OK) {
      |         ^
eMPL/inv_mpu.c(36): error: use of undeclared identifier 'hi2c1'
   36 |     if (HAL_I2C_Mem_Read(&hi2c1, dev_addr << 1, reg_addr, I2C_MEMADD_SIZE_8BIT, data, length, 100) != HAL_OK) {
      |                           ^
eMPL/inv_mpu.c(36): error: use of undeclared identifier 'I2C_MEMADD_SIZE_8BIT'
   36 |     if (HAL_I2C_Mem_Read(&hi2c1, dev_addr << 1, reg_addr, I2C_MEMADD_SIZE_8BIT, data, length, 100) != HAL_OK) {
      |                                                           ^
eMPL/inv_mpu.c(36): error: use of undeclared identifier 'HAL_OK'
   36 |     if (HAL_I2C_Mem_Read(&hi2c1, dev_addr << 1, reg_addr, I2C_MEMADD_SIZE_8BIT, data, length, 100) != HAL_OK) {
      |                                                                                                       ^
eMPL/inv_mpu.c(43): error: call to undeclared function 'HAL_GetTick'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   43 |     *timestamp = HAL_GetTick();
      |                  ^
eMPL/inv_mpu.c(127): error: Gyro driver is missing the system layer implementations.
  127 | #error  Gyro driver is missing the system layer implementations.
      |  ^
eMPL/inv_mpu.c(131): error: Which gyro are you using? Define MPUxxxx in your compiler options.
  131 | #error  Which gyro are you using? Define MPUxxxx in your compiler options.
      |  ^
eMPL/inv_mpu.c(383): error: use of empty enum
  383 | };
      | ^
eMPL/inv_mpu.c(641): error: use of undeclared identifier 'st'
  641 |     if (st.chip_cfg.dmp_on) {
      |         ^
eMPL/inv_mpu.c(646): error: use of undeclared identifier 'st'
  646 |         if (i2c_write(st.hw->addr, st.reg->int_enable, 1, &tmp))
      |                       ^
eMPL/inv_mpu.c(646): error: use of undeclared identifier 'st'
  646 |         if (i2c_write(st.hw->addr, st.reg->int_enable, 1, &tmp))
      |                                    ^
eMPL/inv_mpu.c(648): error: use of undeclared identifier 'st'
  648 |         st.chip_cfg.int_enable = tmp;
      |         ^
eMPL/inv_mpu.c(650): error: use of undeclared identifier 'st'
  650 |         if (!st.chip_cfg.sensors)
      |              ^
eMPL/inv_mpu.c(652): error: use of undeclared identifier 'st'
  652 |         if (enable && st.chip_cfg.int_enable)
      |                       ^
eMPL/inv_mpu.c(658): error: use of undeclared identifier 'st'
  658 |         if (i2c_write(st.hw->addr, st.reg->int_enable, 1, &tmp))
      |                       ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
compiling inv_mpu.c...
eMPL/inv_mpu_dmp_motion_driver.c(66): error: Gyro driver is missing the system layer implementations.
   66 | #error  Gyro driver is missing the system layer implementations.
      |  ^
eMPL/inv_mpu_dmp_motion_driver.c(629): error: call to undeclared function '__no_operation'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
  629 |     __no_operation();
      |     ^
eMPL/inv_mpu_dmp_motion_driver.c(1333): error: call to undeclared function 'get_ms'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
 1333 |     get_ms(timestamp);
      |     ^
eMPL/inv_mpu_dmp_motion_driver.c(1333): note: did you mean 'gets'?
C:\Keil_v5\ARM\ARMCLANG\Bin\..\include\stdio.h(713): note: 'gets' declared here
  713 | extern _ARMABI char *gets(char * /*s*/) __attribute__((__nonnull__(1)));
      |                      ^
3 errors generated.
compiling inv_mpu_dmp_motion_driver.c...
compiling bsp_can.c...
compiling mpu6050.c...
compiling stm32f4xx_hal_i2c.c...
"stm32f405rgt6\stm32f405rgt6.axf" - 22 Error(s), 0 Warning(s).
Target not created.
Build Time Elapsed:  00:00:03
